# detours-rs

./: Cargo.toml  build.rs
libdetours/: CMakeLists.txt  detours_wrapper.h
src/: bindings.rs  lib.rs
